gccida/c0/print_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:586:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code subc; // [rsp+B4h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:608:59: error: use of undeclared identifier 'arg0'
fprintf( outfile, "\n%s%*s", print_rtx_head, 2 * indent, &arg0); 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:677:27: error: invalid operands to binary expression ('int' and 'struct rtx_def')
if ( in_rtx->fld[0].rtint != in_rtx[1] ) 
     ~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:694:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( in_rtx[2] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:715:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
bb = ( basic_block)in_rtx[2]; 
                   ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:728:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
str = ( const char *)in_rtx[2]; 
                     ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:755:59: error: use of undeclared identifier 'arg0'
fprintf( outfile, "\n%s%*s", print_rtx_head, 2 * indent, &arg0); 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:769:59: error: use of undeclared identifier 'arg0'
fprintf( outfile, "\n%s%*s", print_rtx_head, 2 * indent, &arg0); 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:860:19: error: use of undeclared identifier 'off_8068CF'
fprintf( outfile, off_8068CF, ( unsigned int)( in_rtx->fld[0].rtint - 37 + 8)); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:870:8: error: use of undeclared identifier 'print_rtx_qi_name'; did you mean 'print_rtx_head'?
fputs( print_rtx_qi_name[in_rtx->fld[0].rtuint], outfile); 
       ^~~~~~~~~~~~~~~~~
       print_rtx_head
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:66:13: note: 'print_rtx_head' declared here
const char *print_rtx_head = "";
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:876:8: error: use of undeclared identifier 'print_rtx_hi_name'; did you mean 'print_rtx_head'?
fputs( print_rtx_hi_name[in_rtx->fld[0].rtuint], outfile); 
       ^~~~~~~~~~~~~~~~~
       print_rtx_head
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:66:13: note: 'print_rtx_head' declared here
const char *print_rtx_head = "";
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:881:8: error: use of undeclared identifier 'print_rtx_hi_name'; did you mean 'print_rtx_head'?
fputs( print_rtx_hi_name[in_rtx->fld[0].rtuint], outfile); 
       ^~~~~~~~~~~~~~~~~
       print_rtx_head
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:66:13: note: 'print_rtx_head' declared here
const char *print_rtx_head = "";
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:1003:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( in_rtx[4] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:1019:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
tema = ( rtx)in_rtx[1]; 
             ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:1055:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( in_rtx[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:1062:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( in_rtx[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:1070:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( in_rtx[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:1076:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( in_rtx[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/print-rtl.c:1083:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( in_rtx[1] ) 
^    ~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtx/src/obj/print-rtl.o] Error 1
